--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 server:
-  port: 8088
-
+  port: 8888
 spring:
   profiles:
     active: native
+  application:
+    name: config-server
+  cloud:
+    config:
+      server:
+        native:
+          search-locations: classpath:/config
