--- a/transaction-service/src/main/resources/application.yaml
+++ b/transaction-service/src/main/resources/application.yaml
@@ -1,20 +1,19 @@
-
-
 spring:
   application:
     name: transaction-service
-  config:
-    import: "optional:configserver:http://localhost:8088"
-
-
   datasource:
-    url: jdbc:mysql://db:3306/bank_service_db
-    username: root
-    password: password
+    url: jdbc:mysql://localhost:3307/bank_service_db?useSSL=false&allowPublicKeyRetrieval=true  # Use Docker service name for MySQL, not localhost
+    username: appuser
+    password: apppass
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQLDialect
+
+  config:
+    import: optional:configserver:http://localhost:8888
+
